--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@ body {
 /* 共通 */
 
 section {
-    margin-bottom: 15rem;
+    /* margin-bottom: 15rem; */
 }
 
 .textbox {
     padding: 3rem;
-    background-color:#fff;
+    background-color: rgba(255, 255, 255, 60%);
 }
 
 .decolation {
@@ -30,6 +30,10 @@ section {
 a {
     text-decoration: none;
 }
+
+h1 {
+    font-weight: normal;
+}
 /* header部分 */
 header {
     position: absolute;
@@ -39,7 +43,7 @@ header {
     z-index: 3;
     color: white;
     position: fixed;
-    top:0;/*ポジション設定topを0*/
+    top:0;
     display: flex;
     justify-content: space-between;
 }
@@ -79,7 +83,8 @@ header nav a {
 }
 
 header nav a:hover {
-    color: #b9ae84;
+   font-weight: bold;
+   transition: .3s;
 }
 
 /* スクロール時のヘッダー背景色 */
@@ -222,47 +227,53 @@ button {
     top: 0;
     left: 0;
     z-index: 1;
-    margin-bottom: 15%;
+    margin-bottom: 19vh;
 }
 
 /* about部分 */
 
 #about {
-    position: relative;
-    margin-bottom: 18rem;
     width: 100%;
-    height: 100vh;
+    margin-bottom: 14vh;
 }
 
 #about h1 {
     writing-mode: vertical-rl;
-    margin: 0 10% -3rem auto;
+    margin: 0 10% 0 auto;
 }
 
-
-#about .aboutimg {
-    object-fit: contain;
-    width: 65%;
-    float: right;
-}
 
 .about-text {
     writing-mode: vertical-rl;
     text-align: justify;
-    margin-left: 10%;
     font-size: 1.1rem;
-    height: 40%;
     line-height: 2.2;
-    position: absolute; 
-    top: 50%;
+    margin: 0 18% 0 auto;
+    position: relative;
+    z-index: 1;
+    margin-top: -8rem;
 } 
+
+.about-text p {
+    border-left: solid 1px gray;
+    font-size: 1.9vw;
+    letter-spacing: 0.45rem;
+    padding-left: 0.95vw;
+}
+
+#about .aboutimg {
+    object-fit: contain;
+    width: 66%;
+    position: relative;
+    z-index: -1;
+    margin-top: -5rem;
+}
 
 .cloud-decoration {
     width: 320px;
     max-width: 45%;
-    position: absolute;
-    top: 90%;
-    right: 0;
+    margin: 0 0 0 auto;
+    display: block;
 }
 
 /* お知らせ部分 */
@@ -270,6 +281,7 @@ button {
 .info-text {
     width: 60%;
     margin: 0 auto;
+    margin-bottom: 22vh;
 }
 
 .info-text h1 {
@@ -304,6 +316,7 @@ button {
     vertical-align: middle;
     text-decoration: none;
 }
+
 .arrow::before,
 .arrow::after{
     position: absolute;
@@ -339,13 +352,12 @@ button {
 #product-info {
     margin: 0 auto;
     width: 100%;
-    /* height: 100vh; */
-    margin-bottom: 15%;
+    margin-bottom: 22vh;
 }
 
 .productinfo-titlearea {
     display: flex;
-    margin-bottom: 10%;
+    /* margin-bottom: 10%; */
 }
 
 
@@ -357,72 +369,70 @@ button {
 #chidori {
     width: 320px;
     max-width: 45%;
-    margin-top: -10rem;
+    margin-top: -5rem;
 }
 
 .item-list {
-    width: 57%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-bottom: 10%;
-}
-
-.item-img {
-    object-fit: contain;
-    width: 45%;
-    margin-bottom: 5%;
-}
-
-.item-text {
-    width: 45%;
-    background-color: #fff;
-    margin-bottom: 5%;
-    text-align: center;
-    vertical-align: middle;
-    display: table;
-}
-
-.item-text p {
-    display: table-cell;
-    vertical-align: middle;
-    font-size: 1.5vw;
-}
-
-
-/* .item-list {
-    width: 70%;
-    display: flex;
-    margin: 0 auto;
-    margin-bottom: 15%;
+    margin-top: -7rem;
+    margin-bottom: 16vh;
 }
 
 .item-box {
-    width: 30%;
-    height: 50vh;
-    position: relative;
-    margin-left: 2rem;
+    display: flex;
+    width: 29%;
 }
 
-.item-box img {
+
+.item-img {
+    position: relative;
+    z-index: -1;
     object-fit: contain;
-    max-width: 70%;
-    position: absolute;
-    top: 70%;
-    left: -20%;
+    width: 87.5%;
 }
 
 .item-text {
-    width: 25%;
-    height: 70%;
-    margin-right: 0;
+    position: relative;
+    z-index: 0;
+    background-color:rgba(255, 255, 255, 60%);
+    margin-right: -1rem;
+    writing-mode: vertical-rl;
+    white-space: nowrap;
+    padding: 0.7rem;
+    height: 150px;
 }
 
-.item-text p {
-    writing-mode: vertical-rl;
-    text-align: right;
-} */
+.info-text ul li a:hover {
+    font-weight: bold;
+}
+
+.item-text span {
+    text-combine-upright: all;
+}
+
+.item-name {
+    font-size: 1.2rem;
+    margin:0 auto;
+    border-left: 1px solid #E4DCBF;
+    padding-left: 0.3rem;
+}
+
+.item-price {
+    margin:60px 0 auto 0;
+    padding-right: 0.3rem;
+}
+
+#first-item {
+    margin: 0 23% 0 auto;
+}
+
+#second-item {
+    margin-left: 15.6%;
+}
+
+#third-item {
+    margin: 0 13% 0 auto;;
+    margin-top: -10%;
+}
 
 /* ボタン */
 .viewbutton {
@@ -432,36 +442,22 @@ button {
 
 /* shopinfo */
 #shop-info {
-    /* position: relative;
-    height: 100vh; */
-    margin-bottom: 20%;
+    margin-bottom: 20vh;
 }
-
-/* #shop-info #koshi {
-    position: absolute;
-    top: 0;
-    right: 0;
-} */
 
 #shop-info h1 {
     writing-mode: vertical-rl;
-    margin: 0 10% 15% auto;
-    margin-bottom: -1rem;
+    margin: 0 10% 0 auto;
 }
 
-/* .shop-text{
-    margin-left: 30%;
-    margin-bottom: 10rem;
-    width: 50%;
-    max-height: 43%;
-    margin-top: -2rem;
-}  */
 
 .shopinfo-main {
-    width: 100%;
-    background-color: #fff;
+    width: 80%;
+    margin: 0 auto;
+    background-color:rgba(255, 255, 255, 60%);
     padding-top: 6%;
     padding-bottom: 6%;
+    margin-top: -2rem;
     
 }
 
@@ -477,7 +473,7 @@ button {
     display: flex;
     width: 80%;
     margin: 0 auto;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
 }
 
 .shopinfo-map {
@@ -554,11 +550,6 @@ footer a {
     padding: 0.5rem 1rem;
 }
 
-/* .mail-button {
-    font-size: 1rem;
-    border: #fff 1px solid;
-    background: #fff;
-} */
 
 .copyright {
     color: #333;
@@ -575,32 +566,37 @@ footer a {
     }
     
     #about {
-        position: relative;
-        height: auto;
+        /* height: auto; */
         margin-bottom: 0;
     }
 
     #about　h1 {
         margin: 0 auto;
         margin-bottom: -5rem;
-        position: relative;
-        z-index: 1;
     }
 
     #about .aboutimg {
         width: 100%;
         z-index: 0;
         margin-bottom: 1rem;
+        margin-top: 0;
     }
 
     .about-text{
         writing-mode: horizontal-tb;
-        position: static;
-        font-size: normal;
+        font-size: 1rem;
+        letter-spacing: normal;
+        border-left: none;
         width: 80%;
         margin: 0 auto;
         line-height: normal;
         margin-bottom: 3rem;
+    }
+
+    .about-text p {
+        font-size: 1rem;
+        letter-spacing: normal;
+        border-left: none;
     }
 
     .float-clear {
@@ -630,47 +626,60 @@ footer a {
         padding-top: 3rem;
     }
 
+    .item-box {
+        width: 45%;
+    }
+
+    #first-item {
+        margin: 0 23% 0 auto;
+        margin-bottom: 2rem;
+    }
+    
+    #second-item {
+        margin-left: 15.6%;
+        margin-bottom: 2rem;
+    }
+    
+    #third-item {
+        margin: 0 13% 0 auto;
+        margin-bottom: 2rem;
+    }
+
     #chidori {
         margin-top: 0;
         width: 45%;
     }
 
-    /* .item-list {
-        width: 80%;
-        margin-bottom: 0;
-    }
-
-    .item-text {
-        height: 50%;
-    }
-
-    .item-box {
-        height: 42vh;
-    }
-
-    .item-box img {
-        width: 100%;
-        max-width: none;
-        top: 50%;
-    } */
 
     #shop-info {
-        height: auto;
         margin-bottom: 5rem;
     }
 
-    #shop-info #shopimg {
+    .shopinfo-main {
         width: 100%;
+    }
+
+    #shop-info #shopimg {
+        width: 90%;
         margin-bottom: 1rem;
     }
 
-    /* .shop-text{
-        margin: 0 auto;
-        margin-bottom: 3rem;
-        width: 80%;
-        max-height: none;
-        margin-top: 0;
-    }  */
+    .shop-text {
+        display: block;
+    }
+
+    .shopinfo-map {
+        width: 90%;
+    }
+    
+    .shopinfo-text {
+        width: 90%;
+        margin-left: 0;
+    }
+    
+
+
+
     
     .footer-content {
         flex-direction: column;
